<resources>
    <string name="app_name">Hamo</string>
    <string name="title_home">Home</string>
    <string name="title_report">Report </string>
    <string name="title_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login</string>
    <string name="signup_fragment">Sign Up</string>
    <string name="roleGiver">giver</string>
    <string name="roleRep">rep</string>
    <string name="roleAdmin">admin</string>
    <string name="giver">Giver</string>
    <string name="community_rep">Community Representative</string>
    <string name="admin">Admin</string>
    <string name="forgot_password_fragment">Forgot Password</string>
    <string name="email_or_phone_number">Email/ Phone number</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="join_us">Join us</string>
    <string name="action_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="send_code">Send code</string>
    <string name="email_phone_empty">Email or Phone number cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="connection_error">Connection error please try again later</string>
    <string name="upload_photo"><u>Select an image</u></string>
    <string name="take_photo"><u>Take a photo</u></string>
    <string name="donate">Donate</string>
    <string name="create_request">Create Request</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="submit_request">Submit Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="donation_details">Enter the donation details here</string>

    <string-array name="role_array">
        <item>Giver</item>
        <item>Community Representative</item>
    </string-array>
</resources>